<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".editprofile14">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/backToProfile"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_back_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="50dp"
                android:text="Edit Profile"
                android:gravity="left"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/saveChanges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:gravity="end"
                android:text="Save Changes"
                android:textColor="#FF9800"
                android:textSize="18sp" />

        </LinearLayout>


        <!--Name-->
        <TextView
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="start"
            android:textSize="14sp"/>

        <!-- Enter name Placeholder -->
        <EditText
            android:id="@+id/name"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/rounded_rectangle"
            android:paddingLeft="20dp"
            android:hint="Enter name"
            android:textColor="#393838"
            android:gravity="center|left"
            android:textSize="18sp"/>

        <!-- Row 2: Title Email -->
        <TextView
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="start"
            android:textSize="14sp"/>

        <!-- Row 3: Enter Email Placeholder -->
        <EditText
            android:id="@+id/email"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/rounded_rectangle"
            android:paddingLeft="20dp"
            android:hint="Enter email"
            android:textColor="#393838"
            android:gravity="center|left"
            android:textSize="18sp"/>
        <!-- Row 2: Title Email -->


        <!-- Row 4: Title contact -->
        <TextView
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Contact Number"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="start"
            android:textSize="14sp"/>

        <!-- Row 5: Enter contact  Placeholder -->
        <EditText
            android:id="@+id/number"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingLeft="20dp"
            android:background="@drawable/rounded_rectangle"
            android:hint="Enter contact number"
            android:inputType="phone"
            android:textColor="#393838"
            android:gravity="center|left"
            android:textSize="18dp"/>

        <TextView
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Country"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="start"
            android:textSize="14sp"/>

        <!-- Row 6: Select Country Spinner -->
        <Spinner
            android:id="@+id/spinnerCountry"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/drop_down_rectangle"
            android:textColor="#393838"
            android:gravity="center|left"
            android:textSize="18sp"
            android:entries="@array/countries"
            android:prompt="@string/select_country" />

        <TextView
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="City"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="start"
            android:textSize="14sp"/>

        <!-- Row 7: Select City Spinner -->
        <Spinner
            android:id="@+id/spinnerCity"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/drop_down_rectangle"
            android:textColor="#393838"
            android:gravity="center|left"
            android:textSize="18sp"
            android:entries="@array/cities"
            android:prompt="@string/select_city" />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>