<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".itempost13">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        />


    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#918F8F"
        android:layout_below="@id/toolbar"
        />

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_close_24"
        android:contentDescription="Back"
        android:layout_gravity="start"
        android:layout_marginStart="10dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Item"
        android:textSize="25sp"
        android:paddingTop="15dp"
        android:textStyle="bold"
        android:layout_marginLeft="45dp"
        />

    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp">

        <RelativeLayout
            android:id="@+id/relative2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/image"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/uploadimage" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"

            android:layout_toRightOf="@id/relative2">

            <ImageView
                android:id="@+id/video"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:src="@drawable/uploadvideo"
                android:layout_marginLeft="20dp" />

        </RelativeLayout>
    </RelativeLayout>


    <TextView
        android:id="@+id/name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative1"
        android:text="Name"
        android:textSize="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        />

    <EditText
        android:id="@+id/entername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box"
        android:hint="Enter Item Name"
        android:layout_below="@id/name1"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="15dp"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/hourlyrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/entername"
        android:hint="Hourly Rate"
        android:textSize="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/enterhourly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box"
        android:hint="Enter hourly rate"
        android:layout_below="@id/hourlyrate"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="15dp"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/enterhourly"
        android:text="Description"
        android:textSize="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/enterdescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box"
        android:hint="Enter Item Description"
        android:layout_below="@id/description"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="15dp"
        android:padding="20dp"
        />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/enterdescription"
        android:text="City"
        android:textSize="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        />


        <EditText

            android:id="@+id/bestmatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box"
            android:hint="Enter City"
            android:layout_below="@id/city"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="15dp"
            android:padding="20dp"
        />

    <TextView
        android:layout_marginStart="20dp"
        android:id="@+id/post_item_btn"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="630dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rounded_rectangle_orange"
        android:text="Post Item"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:clickable="true"
        android:textSize="20sp"/>


</RelativeLayout>