<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:src="@drawable/spotit"
            android:contentDescription="logo"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </ImageView>

        <!-- Row 1: Header Login -->
        <TextView
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="left"
            android:textSize="20sp"/>

        <!-- Row 2: Title Email -->
        <TextView
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="start"
            android:textSize="16sp"/>

        <!-- Row 3: Enter Email Placeholder -->
        <EditText
            android:id="@+id/email"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/rounded_rectangle"
            android:paddingLeft="20dp"
            android:hint="Enter email"
            android:textColor="#393838"
            android:gravity="center|left"
            android:textSize="18sp"/>

        <!-- Row 4: Title Password -->
        <TextView
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="start"
            android:textSize="16sp"/>

        <!-- Row 5: Enter Password Placeholder -->
        <EditText
            android:id="@+id/password"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingLeft="20dp"
            android:background="@drawable/rounded_rectangle"
            android:hint="Enter password"
            android:inputType="numberPassword"
            android:textColor="#393838"
            android:gravity="center|left"
            android:textSize="18sp"/>

        <!-- Row 6: Forgot Password Button -->
        <TextView
            android:id="@+id/forgotPasswordText"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot your password?"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="#FF9800"
            android:layout_gravity="end"/>

        <!-- Row 7: Login Button -->
        <TextView
            android:id="@+id/login"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_rectangle_orange"
            android:text="Login"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20sp"/>

        <!-- Row 8: Sign Up Link -->
        <TextView
            android:id="@+id/signup"
            android:layout_marginStart="20dp"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#787070" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
